# BlackHoleSimulation

./: CMakeLists.txt  README.md  build.sh  clean_build.sh  run_simulation.sh
src/: BlackHole.cpp  BlackHole.h  Camera.cpp  Camera.h  GravitationalLensing.cpp  GravitationalLensing.h  PhysicsEngine.cpp  PhysicsEngine.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  TimeDilationCalculator.cpp  TimeDilationCalculator.h  main.cpp
src/shaders/: accretion.frag  accretion.vert  blackhole.frag  blackhole.vert
